# spycy-waiting

./: .gitignore  README.md  example.sh  setup.cfg  setup.py
src/spycy_invaders/: __init__.py  config.py  main.py
src/spycy_waiting/: config.py  crusaders.py  invaders.py  main.py  shapes.py  wordle.py
src/spycy_waiting/data/: wordle_words.txt
