[metadata]
name = spycy-invaders
description = Blast invaders while awaiting completion
long_description = file: README.md, LICENSE
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = GPL-3.0-or-later
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/spycy-invaders
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: Unix
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)


[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.7
install_requires =
    cursedspace >= 1.4.1

[options.entry_points]
console_scripts =
    invasion = spycy_invaders:run

[options.packages.find]
where = src

[options.extras_require]
develop = 
    pytest >= 6.2.5
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2